<resources>
    <string name="app_name">Child Care</string>
    <string name="powered">Powered by</string>
    <string name="bioMetricHeading">Choose how to unlock App</string>
    <string name="bioMetricSubHeading">This application must be  protected at all times</string>
    <string name="bioMetricFingerPrint">Use Biometric</string>
    <string name="bioMetricPassCode">Use Passcode</string>
    <string name="or">or</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="touch_here">Touch Here</string>
    <string name="welcome">Welcome</string>
    <string name="start_fresh">Start Fresh</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="restore_from_a_backup">Restore from a BackUp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="view">View</string>
    <string name="organization">Organization</string>

</resources>
